--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -524,17 +524,17 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="8" column="1">
+                   <item row="9" column="1">
                     <widget class="QLineEdit" name="simpleOutCustomX264"/>
                    </item>
-                   <item row="8" column="0">
+                   <item row="9" column="0">
                     <widget class="QLabel" name="label_23">
                      <property name="text">
                       <string>Basic.Settings.Output.CustomX264Settings</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="7" column="0">
+                   <item row="8" column="0">
                     <widget class="QLabel" name="label_24">
                      <property name="enabled">
                       <bool>true</bool>
@@ -544,7 +544,7 @@
                      </property>
                     </widget>
                    </item>
-                   <item row="7" column="1">
+                   <item row="8" column="1">
                     <widget class="QComboBox" name="simpleOutPreset">
                      <item>
                       <property name="text">
@@ -586,6 +586,16 @@
                        <string notr="true">slower</string>
                       </property>
                      </item>
+                    </widget>
+                   </item>
+                   <item row="7" column="1">
+                    <widget class="QCheckBox" name="simpleOutUseCBR">
+                     <property name="text">
+                      <string>Basic.Settings.Output.UseCBR</string>
+                     </property>
+                     <property name="checked">
+                      <bool>true</bool>
+                     </property>
                     </widget>
                    </item>
                   </layout>
@@ -1188,8 +1198,8 @@
      <y>240</y>
     </hint>
     <hint type="destinationlabel">
-     <x>432</x>
-     <y>256</y>
+     <x>750</x>
+     <y>295</y>
     </hint>
    </hints>
   </connection>
@@ -1204,8 +1214,8 @@
      <y>241</y>
     </hint>
     <hint type="destinationlabel">
-     <x>308</x>
-     <y>266</y>
+     <x>367</x>
+     <y>295</y>
     </hint>
    </hints>
   </connection>
@@ -1220,8 +1230,8 @@
      <y>234</y>
     </hint>
     <hint type="destinationlabel">
-     <x>452</x>
-     <y>292</y>
+     <x>750</x>
+     <y>321</y>
     </hint>
    </hints>
   </connection>
@@ -1236,8 +1246,24 @@
      <y>236</y>
     </hint>
     <hint type="destinationlabel">
-     <x>350</x>
-     <y>286</y>
+     <x>367</x>
+     <y>321</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>simpleOutAdvanced</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>simpleOutUseCBR</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>398</x>
+     <y>241</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>410</x>
+     <y>261</y>
     </hint>
    </hints>
   </connection>
