UI: Add OBSHotkey{Edit,Label,Widget}
OBSHotkeyEdit is similar to QKeySequenceEdit, except less terribad on OSX, while
OBSHotkeyWidget provides a container that automagically encapsulates multiple
bindings per hotkey

OBSHotkeyLabel in combination with OBSHotkeyWidget provides mechanisms for
dealing with hotkey pairs (see upcoming usage in window-basic-settings.cpp)

--- a/obs/data/themes/Dark.qss
+++ b/obs/data/themes/Dark.qss
@@ -487,3 +487,7 @@ MuteCheckBox::indicator:checked {
 MuteCheckBox::indicator:unchecked {
     image: url(./Dark/unmute.png);
 }
+
+OBSHotkeyLabel[hotkeyPairHover=true] {
+    color: red;
+}
