Change labels for "Add" and "Remove" buttons to differentiate them
Change "Add" for actionAddSource to "Add Source"
Change "Add" for actionAddScene to "Add Scene"
Change "Remove" for actionRemoveSource to "Remove Source"
Change "Remove" for actionRemoveScene to "Remove Scene"

--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -533,7 +533,7 @@
      <normaloff>:/res/images/add.png</normaloff>:/res/images/add.png</iconset>
    </property>
    <property name="text">
-    <string>Add</string>
+    <string>Add Scene</string>
    </property>
   </action>
   <action name="actionAddSource">
@@ -542,7 +542,7 @@
      <normaloff>:/res/images/add.png</normaloff>:/res/images/add.png</iconset>
    </property>
    <property name="text">
-    <string>Add</string>
+    <string>Add Source</string>
    </property>
   </action>
   <action name="actionRemoveScene">
@@ -551,7 +551,7 @@
      <normaloff>:/res/images/list_remove.png</normaloff>:/res/images/list_remove.png</iconset>
    </property>
    <property name="text">
-    <string>Remove</string>
+    <string>Remove Scene</string>
    </property>
    <property name="shortcut">
     <string>Del</string>
@@ -566,7 +566,7 @@
      <normaloff>:/res/images/list_remove.png</normaloff>:/res/images/list_remove.png</iconset>
    </property>
    <property name="text">
-    <string>Remove</string>
+    <string>Remove Source</string>
    </property>
    <property name="shortcut">
     <string>Del</string>
