Basic UI: Raise bitrate limit to 1000000
I don't know why on earth I set the limit to 16000.  There's no reason
why there should really be a low hard limit.

--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -412,7 +412,7 @@
                       <number>200</number>
                      </property>
                      <property name="maximum">
-                      <number>16000</number>
+                      <number>1000000</number>
                      </property>
                      <property name="value">
                       <number>2000</number>
