--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -262,7 +262,7 @@
               <number>0</number>
              </property>
              <item>
-              <widget class="QListWidget" name="sources">
+              <widget class="LDCListWidget" name="sources">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Ignored" vsizetype="Expanding">
                  <horstretch>0</horstretch>
@@ -845,6 +845,11 @@
    <extends>QScrollArea</extends>
    <header>vertical-scroll-area.hpp</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>LDCListWidget</class>
+   <extends>QListWidget</extends>
+   <header>ldc-list-widget.hpp</header>
   </customwidget>
  </customwidgets>
  <resources>
